Change navbar in all screens to include artists name

--- a/artist.html
+++ b/artist.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Home</title>
@@ -12,7 +13,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+		rel="stylesheet">
 
 
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,29 +37,39 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="index.html"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" style="max-height: 40px; max-width:40px;"/></img></a>
+				<a href="index.html"><img src="img/FinalLogoEditWhite@2x.png" alt="" title=""
+						style="max-height: 40px; max-width:40px;" /></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
 					<li class="menu-has-children">
-						<a href="Gallery.html" onmouseover="this.style.color='#fafafa'">Gallery</a>
+						<a href="Gallery.html">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html">Artist</a>
+						<ul id="artist-navbar-dropdown">
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
 						<a href="#" onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
-							<li><a href="events.html" >Upcoming Events</a></li>
+							<li><a href="events.html">Upcoming Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
-					<li><a href="masha.html"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
-					<li><a href="about.html"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
-					<li><a href="contact.html"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
-					<li><a href="inmedia.html"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
+					<li><a href="masha.html" onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
+					<li><a href="about.html" onmouseover="this.style.color='#fafafa'">About Us</a></li>
+					<li><a href="contact.html" onmouseover="this.style.color='#fafafa'">Contact</a></li>
+					<li><a href="inmedia.html" onmouseover="this.style.color='#fafafa'">In Media</a></li>
 				</ul>
 				<ul class="nav-menu nav-menu-right">
 					<li id="searchGroup">
@@ -85,7 +97,9 @@
 						<div class="backgroundImg1"></div>
 						<div class="carousel-text">
 							<h2><b>Artist of the month</b></h2>
-							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus pellentesque semper a vitae mi. </h5>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
+								faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed
+								risus pellentesque semper a vitae mi. </h5>
 						</div>
 					</div>
 
@@ -93,7 +107,9 @@
 						<div class="backgroundImg1"></div>
 						<div class="carousel-text">
 							<h2><b>Artist of the month 2</b></h2>
-							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus pellentesque semper a vitae mi. </h5>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
+								faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed
+								risus pellentesque semper a vitae mi. </h5>
 						</div>
 					</div>
 				</div>
@@ -108,16 +124,16 @@
 					<span class="sr-only">Next</span>
 				</button>
 			</div>
-			
+
 		</div>
 	</section>
 
-	<main id="main">		
-		
+	<main id="main">
+
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-				
+
 				</div>
 				<div class="row">
 					<div class="col-lg-3 col-md-6">
@@ -167,7 +183,7 @@
 
 			</div>
 		</section>
-	
+
 	</main>
 
 
@@ -178,7 +194,7 @@
 
 				<div class="col-lg-4 col-6 text-center m-t-left">
 
-					<h6 style="margin-top:15px;"><b>About Us</b></h6><br/>
+					<h6 style="margin-top:15px;"><b>About Us</b></h6><br />
 					<p style="margin-top:-27px;">Masha Support.</p>
 				</div>
 
@@ -246,4 +262,5 @@
 		}
 	</script>
 </body>
+
 </html>
