--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Contact Us</title>
@@ -12,7 +13,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+		rel="stylesheet">
 
 
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,8 +45,17 @@
 					<li class="menu-has-children">
 						<a href="Gallery.html">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html">Artist</a>
+						<ul id="artist-navbar-dropdown">
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
@@ -82,7 +93,9 @@
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
 
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452"
+							width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 					</div>
 
@@ -109,7 +122,7 @@
 						</div>
 
 					</div>
-				
+
 
 
 
@@ -118,90 +131,91 @@
 
 			</div>
 		</section>
-		
+
 	</main>
 
 
 
-	
 
 
-	
 
 
-		<section id="footerZ" style="margin-top:45px;">
-			<div class="">
 
-				<div class="row counters">
 
-					<div class="col-lg-4 col-6 text-center m-t-left">
+	<section id="footerZ" style="margin-top:45px;">
+		<div class="">
 
-						<h6 style="margin-top:15px;"><b>About Us</b></h6><br/>
-						<p style="margin-top:-27px;">Masha Support.</p>
-					</div>
+			<div class="row counters">
 
-					<div class="col-lg-4 col-6 text-center">
+				<div class="col-lg-4 col-6 text-center m-t-left">
 
-						<h6 style="margin-top:15px;"><b>Help</b></h6>
-						<p style="margin-top:-6px;">Privacy Policy</p>
-						<p>FAQ</p>
+					<h6 style="margin-top:15px;"><b>About Us</b></h6><br />
+					<p style="margin-top:-27px;">Masha Support.</p>
+				</div>
 
-					</div>
+				<div class="col-lg-4 col-6 text-center">
 
-					<div class="col-lg-4 col-12 text-center m-t-right">
-
-						<h6 style="margin-top:15px;"><b>Contact</b></h6>
-						<p style="margin-top:-6px;">Facebook</p>
-						<p>Instagram</p>
-					</div>
-
+					<h6 style="margin-top:15px;"><b>Help</b></h6>
+					<p style="margin-top:-6px;">Privacy Policy</p>
+					<p>FAQ</p>
 
 				</div>
 
+				<div class="col-lg-4 col-12 text-center m-t-right">
+
+					<h6 style="margin-top:15px;"><b>Contact</b></h6>
+					<p style="margin-top:-6px;">Facebook</p>
+					<p>Instagram</p>
+				</div>
+
+
 			</div>
-		</section>
 
-		<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+		</div>
+	</section>
 
-		<script src="lib/jquery/jquery.min.js"></script>
-		<script src="lib/jquery/jquery-migrate.min.js"></script>
-		<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-		<script src="lib/easing/easing.min.js"></script>
-		<script src="lib/wow/wow.min.js"></script>
-		<script src="lib/waypoints/waypoints.min.js"></script>
-		<script src="lib/counterup/counterup.min.js"></script>
-		<script src="lib/superfish/hoverIntent.js"></script>
-		<script src="lib/superfish/superfish.min.js"></script>
-		<script src="contactform/contactform.js"></script>
-		<script src="js/main.js"></script>
-		<script>
-			var slideIndex = 1;
-			showDivs(slideIndex);
+	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-			function plusDivs(n) {
-				showDivs(slideIndex += n);
+	<script src="lib/jquery/jquery.min.js"></script>
+	<script src="lib/jquery/jquery-migrate.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="lib/easing/easing.min.js"></script>
+	<script src="lib/wow/wow.min.js"></script>
+	<script src="lib/waypoints/waypoints.min.js"></script>
+	<script src="lib/counterup/counterup.min.js"></script>
+	<script src="lib/superfish/hoverIntent.js"></script>
+	<script src="lib/superfish/superfish.min.js"></script>
+	<script src="contactform/contactform.js"></script>
+	<script src="js/main.js"></script>
+	<script>
+		var slideIndex = 1;
+		showDivs(slideIndex);
+
+		function plusDivs(n) {
+			showDivs(slideIndex += n);
+		}
+
+		function currentDiv(n) {
+			showDivs(slideIndex = n);
+		}
+
+		function showDivs(n) {
+			var i;
+			var x = document.getElementsByClassName("mySlides");
+			var dots = document.getElementsByClassName("demo");
+			if (n > x.length) { slideIndex = 1 }
+			if (n < 1) { slideIndex = x.length }
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
 			}
-
-			function currentDiv(n) {
-				showDivs(slideIndex = n);
+			for (i = 0; i < dots.length; i++) {
+				dots[i].className = dots[i].className.replace(" w3-white", "");
 			}
+			x[slideIndex - 1].style.display = "block";
+			x[slideIndex - 1].style.visibility = "visible";
+			dots[slideIndex - 1].className += " w3-white";
+		}
+	</script>
+</body>
 
-			function showDivs(n) {
-				var i;
-				var x = document.getElementsByClassName("mySlides");
-				var dots = document.getElementsByClassName("demo");
-				if (n > x.length) { slideIndex = 1 }
-				if (n < 1) { slideIndex = x.length }
-				for (i = 0; i < x.length; i++) {
-					x[i].style.display = "none";
-				}
-				for (i = 0; i < dots.length; i++) {
-					dots[i].className = dots[i].className.replace(" w3-white", "");
-				}
-				x[slideIndex - 1].style.display = "block";
-				x[slideIndex - 1].style.visibility = "visible";
-				dots[slideIndex - 1].className += " w3-white";
-			}
-		</script>
-	</body>
-	</html>
+</html>
