--- a/masha.html
+++ b/masha.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>What is Mash Support?</title>
@@ -12,7 +13,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+		rel="stylesheet">
 
 
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,8 +45,17 @@
 					<li class="menu-has-children">
 						<a href="Gallery.html">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html">Artist</a>
+						<ul id="artist-navbar-dropdown">
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
@@ -75,14 +86,20 @@
 				<div class="section-header">
 					<h3 class="section-title">What is Masha Support?</h3>
 					<p class="section-description">
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 						<br />
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 
 					</p>
-				</div>		
+				</div>
 
 			</div>
 		</section>
@@ -106,11 +123,17 @@
 
 						<div style="text-align: left;margin-top:80px;">
 							<h2><b>Malhaar</b></h2>
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
+							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 							<br />
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
+							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 							<span><b>Read more</b></span>
 						</div>
 
@@ -123,14 +146,20 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div style="text-align: left;margin-top:80px;">
 							<h2><b>Malhaar</b></h2>
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
+							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 							<br />
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
+							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
+							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 							<span><b>Read more</b></span>
 						</div>
-						
+
 					</div>
 
 
@@ -147,90 +176,91 @@
 
 			</div>
 		</section>
-	
+
 	</main>
 
 
 
-	
 
 
-	
 
 
-		<section id="footerZ" style="margin-top:45px;">
-			<div class="">
 
-				<div class="row counters">
 
-					<div class="col-lg-4 col-6 text-center m-t-left">
+	<section id="footerZ" style="margin-top:45px;">
+		<div class="">
 
-						<h6 style="margin-top:15px;"><b>About Us</b></h6><br/>
-						<p style="margin-top:-27px;">Masha Support.</p>
-					</div>
+			<div class="row counters">
 
-					<div class="col-lg-4 col-6 text-center">
+				<div class="col-lg-4 col-6 text-center m-t-left">
 
-						<h6 style="margin-top:15px;"><b>Help</b></h6>
-						<p style="margin-top:-6px;">Privacy Policy</p>
-						<p>FAQ</p>
+					<h6 style="margin-top:15px;"><b>About Us</b></h6><br />
+					<p style="margin-top:-27px;">Masha Support.</p>
+				</div>
 
-					</div>
+				<div class="col-lg-4 col-6 text-center">
 
-					<div class="col-lg-4 col-12 text-center m-t-right">
-
-						<h6 style="margin-top:15px;"><b>Contact</b></h6>
-						<p style="margin-top:-6px;">Facebook</p>
-						<p>Instagram</p>
-					</div>
-
+					<h6 style="margin-top:15px;"><b>Help</b></h6>
+					<p style="margin-top:-6px;">Privacy Policy</p>
+					<p>FAQ</p>
 
 				</div>
 
+				<div class="col-lg-4 col-12 text-center m-t-right">
+
+					<h6 style="margin-top:15px;"><b>Contact</b></h6>
+					<p style="margin-top:-6px;">Facebook</p>
+					<p>Instagram</p>
+				</div>
+
+
 			</div>
-		</section>
 
-		<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+		</div>
+	</section>
 
-		<script src="lib/jquery/jquery.min.js"></script>
-		<script src="lib/jquery/jquery-migrate.min.js"></script>
-		<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-		<script src="lib/easing/easing.min.js"></script>
-		<script src="lib/wow/wow.min.js"></script>
-		<script src="lib/waypoints/waypoints.min.js"></script>
-		<script src="lib/counterup/counterup.min.js"></script>
-		<script src="lib/superfish/hoverIntent.js"></script>
-		<script src="lib/superfish/superfish.min.js"></script>
-		<script src="contactform/contactform.js"></script>
-		<script src="js/main.js"></script>
-		<script>
-			var slideIndex = 1;
-			showDivs(slideIndex);
+	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-			function plusDivs(n) {
-				showDivs(slideIndex += n);
+	<script src="lib/jquery/jquery.min.js"></script>
+	<script src="lib/jquery/jquery-migrate.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="lib/easing/easing.min.js"></script>
+	<script src="lib/wow/wow.min.js"></script>
+	<script src="lib/waypoints/waypoints.min.js"></script>
+	<script src="lib/counterup/counterup.min.js"></script>
+	<script src="lib/superfish/hoverIntent.js"></script>
+	<script src="lib/superfish/superfish.min.js"></script>
+	<script src="contactform/contactform.js"></script>
+	<script src="js/main.js"></script>
+	<script>
+		var slideIndex = 1;
+		showDivs(slideIndex);
+
+		function plusDivs(n) {
+			showDivs(slideIndex += n);
+		}
+
+		function currentDiv(n) {
+			showDivs(slideIndex = n);
+		}
+
+		function showDivs(n) {
+			var i;
+			var x = document.getElementsByClassName("mySlides");
+			var dots = document.getElementsByClassName("demo");
+			if (n > x.length) { slideIndex = 1 }
+			if (n < 1) { slideIndex = x.length }
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
 			}
-
-			function currentDiv(n) {
-				showDivs(slideIndex = n);
+			for (i = 0; i < dots.length; i++) {
+				dots[i].className = dots[i].className.replace(" w3-white", "");
 			}
+			x[slideIndex - 1].style.display = "block";
+			x[slideIndex - 1].style.visibility = "visible";
+			dots[slideIndex - 1].className += " w3-white";
+		}
+	</script>
+</body>
 
-			function showDivs(n) {
-				var i;
-				var x = document.getElementsByClassName("mySlides");
-				var dots = document.getElementsByClassName("demo");
-				if (n > x.length) { slideIndex = 1 }
-				if (n < 1) { slideIndex = x.length }
-				for (i = 0; i < x.length; i++) {
-					x[i].style.display = "none";
-				}
-				for (i = 0; i < dots.length; i++) {
-					dots[i].className = dots[i].className.replace(" w3-white", "");
-				}
-				x[slideIndex - 1].style.display = "block";
-				x[slideIndex - 1].style.visibility = "visible";
-				dots[slideIndex - 1].className += " w3-white";
-			}
-		</script>
-	</body>
-	</html>
+</html>
