--- a/product.html
+++ b/product.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Product</title>
@@ -12,7 +13,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+		rel="stylesheet">
 
 
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,8 +45,17 @@
 					<li class="menu-has-children">
 						<a href="Gallery.html">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html">Artist</a>
+						<ul id="artist-navbar-dropdown">
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
@@ -96,7 +107,9 @@
 							<span style="color:lightgray;font-size:18px;">Medium: Oil on Canvas</span><br />
 							<br />
 
-							<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'" style="width:90%; text-transform: uppercase" data-toggle="modal" data-target="#myModal">Send Inquiry</button>
+							<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'"
+								style="width:90%; text-transform: uppercase" data-toggle="modal"
+								data-target="#myModal">Send Inquiry</button>
 						</div>
 
 					</div>
@@ -116,10 +129,38 @@
 					<div class="col-lg-12 col-10">
 						<div>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a scelerisque. Massa massa ultricies mi quis hendrerit dolor. Tristique magna sit amet purus gravida quis blandit. Id diam maecenas ultricies mi eget mauris. Mauris ultrices eros in cursus turpis massa. Id donec ultrices tincidunt arcu non sodales neque. Nam at lectus urna duis. Mi proin sed libero enim. Turpis massa sed elementum tempus egestas sed. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Eu non diam phasellus vestibulum lorem sed. Aenean pharetra magna ac placerat. Lectus quam id leo in vitae turpis massa. Faucibus turpis in eu mi bibendum neque egestas. Adipiscing bibendum est ultricies integer quis. Ac turpis egestas maecenas pharetra convallis posuere. A scelerisque purus semper eget duis at tellus. Posuere morbi leo urna molestie. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Fames ac turpis egestas sed tempus urna et. Arcu bibendum at varius vel pharetra vel. Augue lacus viverra vitae congue. Erat velit scelerisque in dictum non consectetur a erat. Maecenas accumsan lacus vel facilisis volutpat est.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci
+								a scelerisque. Massa massa ultricies mi quis hendrerit dolor. Tristique magna sit amet
+								purus gravida quis blandit. Id diam maecenas ultricies mi eget mauris. Mauris ultrices
+								eros in cursus turpis massa. Id donec ultrices tincidunt arcu non sodales neque. Nam at
+								lectus urna duis. Mi proin sed libero enim. Turpis massa sed elementum tempus egestas
+								sed. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Eu non diam
+								phasellus vestibulum lorem sed. Aenean pharetra magna ac placerat. Lectus quam id leo in
+								vitae turpis massa. Faucibus turpis in eu mi bibendum neque egestas. Adipiscing bibendum
+								est ultricies integer quis. Ac turpis egestas maecenas pharetra convallis posuere. A
+								scelerisque purus semper eget duis at tellus. Posuere morbi leo urna molestie. Ac orci
+								phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Fames ac turpis
+								egestas sed tempus urna et. Arcu bibendum at varius vel pharetra vel. Augue lacus
+								viverra vitae congue. Erat velit scelerisque in dictum non consectetur a erat. Maecenas
+								accumsan lacus vel facilisis volutpat est.
 							</p>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a scelerisque. Massa massa ultricies mi quis hendrerit dolor. Tristique magna sit amet purus gravida quis blandit. Id diam maecenas ultricies mi eget mauris. Mauris ultrices eros in cursus turpis massa. Id donec ultrices tincidunt arcu non sodales neque. Nam at lectus urna duis. Mi proin sed libero enim. Turpis massa sed elementum tempus egestas sed. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Eu non diam phasellus vestibulum lorem sed. Aenean pharetra magna ac placerat. Lectus quam id leo in vitae turpis massa. Faucibus turpis in eu mi bibendum neque egestas. Adipiscing bibendum est ultricies integer quis. Ac turpis egestas maecenas pharetra convallis posuere. A scelerisque purus semper eget duis at tellus. Posuere morbi leo urna molestie. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Fames ac turpis egestas sed tempus urna et. Arcu bibendum at varius vel pharetra vel. Augue lacus viverra vitae congue. Erat velit scelerisque in dictum non consectetur a erat. Maecenas accumsan lacus vel facilisis volutpat est.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci
+								a scelerisque. Massa massa ultricies mi quis hendrerit dolor. Tristique magna sit amet
+								purus gravida quis blandit. Id diam maecenas ultricies mi eget mauris. Mauris ultrices
+								eros in cursus turpis massa. Id donec ultrices tincidunt arcu non sodales neque. Nam at
+								lectus urna duis. Mi proin sed libero enim. Turpis massa sed elementum tempus egestas
+								sed. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Eu non diam
+								phasellus vestibulum lorem sed. Aenean pharetra magna ac placerat. Lectus quam id leo in
+								vitae turpis massa. Faucibus turpis in eu mi bibendum neque egestas. Adipiscing bibendum
+								est ultricies integer quis. Ac turpis egestas maecenas pharetra convallis posuere. A
+								scelerisque purus semper eget duis at tellus. Posuere morbi leo urna molestie. Ac orci
+								phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Fames ac turpis
+								egestas sed tempus urna et. Arcu bibendum at varius vel pharetra vel. Augue lacus
+								viverra vitae congue. Erat velit scelerisque in dictum non consectetur a erat. Maecenas
+								accumsan lacus vel facilisis volutpat est.
 							</p>
 
 						</div>
@@ -140,7 +181,9 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
 						<div class="member">
-							<div class="pic"><img src="img/M-F-Husain-Title-Culture-of-the-streets-Water-colour-on-paper-15X22-inches-Year-1982-2.png" alt=""></div>
+							<div class="pic"><img
+									src="img/M-F-Husain-Title-Culture-of-the-streets-Water-colour-on-paper-15X22-inches-Year-1982-2.png"
+									alt=""></div>
 
 						</div>
 					</div>
@@ -238,10 +281,13 @@
 						<input type="text" class="col-10" placeholder="Your Email Id.">
 						<br />
 						<br />
-						<span style="color:lightgray">By sending inquiry, you're agreeing to our terms and policy.</span><br />
+						<span style="color:lightgray">By sending inquiry, you're agreeing to our terms and
+							policy.</span><br />
 						<br />
-						
-						<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'" style="width:362px;height:29px;margin-top:-13px;" data-toggle="modal" data-target="#myModal">Send</button>
+
+						<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'"
+							style="width:362px;height:29px;margin-top:-13px;" data-toggle="modal"
+							data-target="#myModal">Send</button>
 					</div>
 				</div>
 
@@ -294,4 +340,5 @@
 		}
 	</script>
 </body>
-	</html>
+
+</html>
