--- a/theme.html
+++ b/theme.html
@@ -45,8 +45,17 @@
 					<li class="menu-has-children">
 						<a href="Gallery.html">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html">Artist</a>
+						<ul id="artist-navbar-dropdown">
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
@@ -84,7 +93,7 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-6 col-md-6 portfolio-item filter-app">
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 						<img src="img/e470d9484650072285e297194cd1240c.png" alt="">
@@ -95,7 +104,7 @@
 
 					<div class="col-lg-6 col-md-6 portfolio-item filter-web">
 
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 
@@ -104,7 +113,7 @@
 					</div>
 
 					<div class="col-lg-6 col-md-6 portfolio-item filter-app">
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 						<img src="img/IMG_1834.png" alt="">
@@ -113,7 +122,7 @@
 
 
 					<div class="col-lg-6 col-md-6 portfolio-item filter-web">
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 						<img src="img/IMG_1839.png" alt="">
@@ -122,7 +131,7 @@
 					</div>
 
 					<div class="col-lg-6 col-md-6 portfolio-item filter-card">
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 						<img src="img/36x36-2016-bhaskar-5-600x600.png" alt="">
@@ -130,7 +139,7 @@
 					</div>
 
 					<div class="col-lg-6 col-md-6 portfolio-item filter-app">
-						<div class="themeCaptionWrapper" >
+						<div class="themeCaptionWrapper">
 							<h4 style="color:white">THEME</h4>
 						</div>
 						<img src="img/image3.png" alt="">
