--- a/Gallery.html
+++ b/Gallery.html
@@ -33,53 +33,8 @@
 
 <body>
 
-	<header id="header">
-		<div class="container">
+	<script src="js/navbar_bg_white.js"></script>
 
-			<div id="logo" class="pull-left" style="margin-top:-13px;">
-				<a href="index.html"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
-			</div>
-
-			<nav id="nav-menu-container">
-				<ul class="nav-menu">
-					<li class="menu-has-children">
-						<a href="Gallery.html">Gallery</a>
-						<ul>
-							<li><a href="#">Paintings</a></li>
-							<li><a href="#">Sculptures</a></li>
-							<li><a href="#">Shawls</a></li>
-							<li><a href="#">Carpets</a></li>
-							<!--li><a href="theme.html">Themes</a></li-->
-						</ul>
-					</li>
-					<li class="menu-has-children">
-						<a href="artist.html">Artist</a>
-						<ul id="artist-navbar-dropdown">
-							<li><a href="#">All Artists</a></li>
-						</ul>
-					</li>
-					<li class="menu-has-children">
-						<a href="#">Show Case</a>
-						<ul>
-							<li><a href="events.html">Upcoming Events</a></li>
-							<li><a href="#">Exhibitions</a></li>
-						</ul>
-					</li>
-					<li><a href="masha.html">Masha Support</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="inmedia.html">In Media</a></li>
-
-				</ul>
-				<ul class="nav-menu nav-menu-right">
-					<li id="searchGroup">
-						<i class="glyphicon glyphicon-search"></i>
-						<input class="ml-auto" type="text" id="searchText" placeholder="Search">
-					</li>
-				</ul>
-			</nav><!-- #nav-menu-container -->
-		</div>
-	</header>
 	<main id="main">
 		<section id="portfolio">
 			<div class="container wow fadeInUp">
@@ -102,7 +57,7 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
 
 						<img src="img/METAMORPHOSIS-600x600.png" alt="">
 
@@ -212,7 +167,7 @@
 
 
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
@@ -221,45 +176,7 @@
 
 	</main>
 
-
-
-
-
-
-
-
-
-	<section id="footerZ" style="margin-top:45px;">
-		<div class="">
-
-			<div class="row counters">
-
-				<div class="col-lg-4 col-6 text-center m-t-left">
-
-					<h6 style="margin-top:15px;"><b>About Us</b></h6><br />
-					<p style="margin-top:-27px;">Masha Support.</p>
-				</div>
-
-				<div class="col-lg-4 col-6 text-center">
-
-					<h6 style="margin-top:15px;"><b>Help</b></h6>
-					<p style="margin-top:-6px;">Privacy Policy</p>
-					<p>FAQ</p>
-
-				</div>
-
-				<div class="col-lg-4 col-12 text-center m-t-right">
-
-					<h6 style="margin-top:15px;"><b>Contact</b></h6>
-					<p style="margin-top:-6px;">Facebook</p>
-					<p>Instagram</p>
-				</div>
-
-
-			</div>
-
-		</div>
-	</section>
+	<script src="js/footer.js"></script>
 
 	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
@@ -275,9 +192,9 @@
 	<script src="contactform/contactform.js"></script>
 	<script src="js/main.js"></script>
 	<script>
-
-		$(".portfolio-item").click(function () {
-			window.location = "product.html";
+		getProductsFromDatabase();
+		$("#portfolio-wrapper").on('click', ".portfolio-item", function () {
+			window.location = `product.html?id=${$(this).attr("data-id")}`;
 
 		});
 		var slideIndex = 1;
@@ -306,6 +223,34 @@
 			x[slideIndex - 1].style.display = "block";
 			x[slideIndex - 1].style.visibility = "visible";
 			dots[slideIndex - 1].className += " w3-white";
+		}
+
+		function getProductsFromDatabase() {
+			$.get(`http://4f9b339d.ngrok.io/paintings`, function (data) {
+				console.log(data);
+				var productsList = $("#portfolio-wrapper");
+				data.forEach(function (product) {
+					productsList.append(`
+						<div class="col-lg-4 col-md-6 portfolio-item filter-app" data-id="${product.id}">
+
+							<img src="img/METAMORPHOSIS-600x600.png" alt="">
+
+							<div style="text-align: center;">
+								<h4>${product.title}</h4>
+								<span>${product.artist}</span><br />
+								<span style="color:lightgray">Oil on Canvas</span>
+							</div>
+						</div>
+					`);
+				});
+				// for (var i = 0; i < numberOfArtists; i++) {
+				// 	// console.log(data[i].artist);
+				// 	var artistName = data[i].artist;
+				// 	var listString = `<li><a href="#">${artistName}</a></li>`;
+				// 	listComp.prepend(listString);
+				// 	listMobile.prepend(listString);
+				// }
+			});
 		}
 	</script>
 </body>
