--- a/about.html
+++ b/about.html
@@ -33,53 +33,8 @@
 
 <body>
 
-	<header id="header">
-		<div class="container">
+	<script src="js/navbar_bg_white.js"></script>
 
-			<div id="logo" class="pull-left" style="margin-top:-13px;">
-				<a href="index.html"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
-			</div>
-
-			<nav id="nav-menu-container">
-				<ul class="nav-menu">
-					<li class="menu-has-children">
-						<a href="Gallery.html">Gallery</a>
-						<ul>
-							<li><a href="#">Paintings</a></li>
-							<li><a href="#">Sculptures</a></li>
-							<li><a href="#">Shawls</a></li>
-							<li><a href="#">Carpets</a></li>
-							<!--li><a href="theme.html">Themes</a></li-->
-						</ul>
-					</li>
-					<li class="menu-has-children">
-						<a href="artist.html">Artist</a>
-						<ul id="artist-navbar-dropdown">
-							<li><a href="#">All Artists</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">Show Case</a>
-						<ul>
-							<li><a href="events.html">Upcoming Events</a></li>
-							<li><a href="#">Exhibitions</a></li>
-						</ul>
-					</li>
-					<li><a href="masha.html">Masha Support</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="inmedia.html">In Media</a></li>
-
-				</ul>
-				<ul class="nav-menu nav-menu-right">
-					<li id="searchGroup">
-						<i class="glyphicon glyphicon-search"></i>
-						<input class="ml-auto" type="text" id="searchText" placeholder="Search">
-					</li>
-				</ul>
-			</nav><!-- #nav-menu-container -->
-		</div>
-	</header>
 	<main id="main">
 		<section id="team">
 			<div class="container wow fadeInUp">
@@ -179,45 +134,7 @@
 
 	</main>
 
-
-
-
-
-
-
-
-
-	<section id="footerZ" style="margin-top:45px;">
-		<div class="">
-
-			<div class="row counters">
-
-				<div class="col-lg-4 col-6 text-center m-t-left">
-
-					<h6 style="margin-top:15px;"><b>About Us</b></h6><br />
-					<p style="margin-top:-27px;">Masha Support.</p>
-				</div>
-
-				<div class="col-lg-4 col-6 text-center">
-
-					<h6 style="margin-top:15px;"><b>Help</b></h6>
-					<p style="margin-top:-6px;">Privacy Policy</p>
-					<p>FAQ</p>
-
-				</div>
-
-				<div class="col-lg-4 col-12 text-center m-t-right">
-
-					<h6 style="margin-top:15px;"><b>Contact</b></h6>
-					<p style="margin-top:-6px;">Facebook</p>
-					<p>Instagram</p>
-				</div>
-
-
-			</div>
-
-		</div>
-	</section>
+	<script src="js/footer.js"></script>
 
 	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
